add: route places have positions
