# internal/models/routes.go
@@ -7,22 +7,32 @@ type RouteBase struct {
 	Properties interface{} `json:"properties"`
 }
 
+type PlaceIDWithPosition struct {
+	PlaceID  int `json:"place_id"`
+	Position int `json:"position"`
+}
+
+type PlaceWithPosition struct {
+	Place    Place `json:"place"`
+	Position int   `json:"position"`
+}
+
 type RouteCreate struct {
-	TagIDs   []int `json:"tag_ids"`
-	PlaceIDs []int `json:"place_ids"`
+	TagIDs               []int                 `json:"tag_ids"`
+	PlaceIDsWithPosition []PlaceIDWithPosition `json:"places"`
 	RouteBase
 }
 
 type RouteRaw struct {
-	ID       int   `json:"id"`
-	Tags     []Tag `json:"tags"`
-	PlaceIDs []int `json:"place_ids"`
+	ID                   int                   `json:"id"`
+	Tags                 []Tag                 `json:"tags"`
+	PlaceIDsWithPosition []PlaceIDWithPosition `json:"place_ids"`
 	RouteBase
 }
 
 type Route struct {
-	ID     int     `json:"id"`
-	Tags   []Tag   `json:"tags"`
-	Places []Place `json:"places"`
+	ID     int                 `json:"id"`
+	Tags   []Tag               `json:"tags"`
+	Places []PlaceWithPosition `json:"places"`
 	RouteBase
 }
